# src/pages/Contact/types.ts
@@ -1,6 +1,7 @@
 export type ContactFormValues = {
   name: string;
   email: string;
-  subject?: string;
+  phoneNumber: string;
+  subject: string;
   message: string;
 };
